--- a/fps/_ForgottenPassword.html
+++ b/fps/_ForgottenPassword.html
@@ -1,123 +1,155 @@
 <!DOCTYPE html>
 <!-- saved from url=(0076)https://staging-redesign-app.k8s.fpsupport.nl/login/wachtwoord-vergeten.html -->
-<html lang="nl"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-<title>Forgotten password</title>
+<html lang="nl">
 
-<link rel="shortcut icon" href="https://staging-redesign-app.k8s.fpsupport.nl/faviconAnsul.ico" type="image/x-icon">
-<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css">
-<link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
-<link rel="stylesheet" type="text/css" href="https://staging-redesign-app.k8s.fpsupport.nl/assets/css/bootstrap-datepicker3.css">
-<link rel="stylesheet" type="text/css" href="https://staging-redesign-app.k8s.fpsupport.nl/assets/css/customstyle.css">
-<link rel="stylesheet" type="text/css" href="https://staging-redesign-app.k8s.fpsupport.nl/assets/css/customStyleLasted.css">
-<link rel="stylesheet" type="text/css" href="https://staging-redesign-app.k8s.fpsupport.nl/assets/css/select2.css">
-<link rel="stylesheet" type="text/css" href="https://staging-redesign-app.k8s.fpsupport.nl/assets/css/style.css">
-<link rel="stylesheet" type="text/css" href="https://staging-redesign-app.k8s.fpsupport.nl/assets/lib/bootstrap-toggle/css/bootstrap-toggle.min.css">
-<link rel="stylesheet" type="text/css" href="https://staging-redesign-app.k8s.fpsupport.nl/assets/css/transition.min.css">
-<script src="https://www.google-analytics.com/analytics.js"></script>
+<head>
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+    <title>Forgotten password</title>
+
+    <link rel="shortcut icon" href="https://staging-redesign-app.k8s.fpsupport.nl/faviconAnsul.ico" type="image/x-icon">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css">
+    <link rel="stylesheet" type="text/css"
+        href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
+    <link rel="stylesheet" type="text/css"
+        href="https://staging-redesign-app.k8s.fpsupport.nl/assets/css/bootstrap-datepicker3.css">
+    <link rel="stylesheet" type="text/css"
+        href="https://staging-redesign-app.k8s.fpsupport.nl/assets/css/customstyle.css">
+    <link rel="stylesheet" type="text/css"
+        href="https://staging-redesign-app.k8s.fpsupport.nl/assets/css/customStyleLasted.css">
+    <link rel="stylesheet" type="text/css" href="https://staging-redesign-app.k8s.fpsupport.nl/assets/css/select2.css">
+    <link rel="stylesheet" type="text/css" href="https://staging-redesign-app.k8s.fpsupport.nl/assets/css/style.css">
+    <link rel="stylesheet" type="text/css"
+        href="https://staging-redesign-app.k8s.fpsupport.nl/assets/lib/bootstrap-toggle/css/bootstrap-toggle.min.css">
+    <link rel="stylesheet" type="text/css"
+        href="https://staging-redesign-app.k8s.fpsupport.nl/assets/css/transition.min.css">
+    <script src="https://www.google-analytics.com/analytics.js"></script>
 
 
-<style>
-/* Set height of the grid so .sidenav can be 100% (adjust if needed) */
-.row.content {
-}
-/* Set gray background color and 100% height */
-.sidenav {
-background-color: #f1f1f1;
-height: 100%;
-}
-/* On small screens, set height to 'auto' for sidenav and grid */
-@media screen and (max-width: 767px) {
-.sidenav {
-height: auto;
-padding: 15px;
-}
-.row.content {
-height: auto;
-}
-}
-</style>
+    <style>
+        /* Set height of the grid so .sidenav can be 100% (adjust if needed) */
+        .row.content {}
+
+        /* Set gray background color and 100% height */
+        .sidenav {
+            background-color: #f1f1f1;
+            height: 100%;
+        }
+
+        /* On small screens, set height to 'auto' for sidenav and grid */
+        @media screen and (max-width: 767px) {
+            .sidenav {
+                height: auto;
+                padding: 15px;
+            }
+
+            .row.content {
+                height: auto;
+            }
+        }
+    </style>
 </head>
+
 <body class="" style="overflow-x:hidden;">
-<div id="login" class="container">
-<div id="loginBox" class="row">
-<div class="logoSmall"></div>
-<div class="loginForm">
-<form action="https://staging-redesign-app.k8s.fpsupport.nl/login/sendResetInstructions/" method="post">
-<input name="loginId" value="" type="text" placeholder="E-mailadres">
-<button class="submitBtn submitBtnCustom" name="submit" type="submit" value="versturen">Versturen</button>
-</form>
-</div>
-</div>
-</div>
+    <div id="login" class="container">
+        <div id="loginBox" class="row">
+            <div class="logoSmall"></div>
+            <div class="loginForm">
+                <form action="_Login.html" method="post">
+                    <!-- material input text-->
+                    <div class="no-border bg-transparent form-field">
+                        <div class="form-field__control">
+                            <input id="loginId" type="text" class="form-field__input" placeholder=" ">
+                            <label for="loginId" class="form-field__label">E-mailadres</label>
+                        </div>
+                    </div>
+
+                    <button class="submitBtn submitBtnCustom" name="submit" type="submit"
+                        value="versturen">Versturen</button>
+                </form>
+            </div>
+        </div>
+    </div>
 
 
-<footer class="footer container-fluid">
-<div class="container">
-<hr>
-<ul class="logo-footer">
-<li>
-<img width="151" heidht="26" src="./Forgotten password_files/saved_resource">
-</li>
-</ul>
-</div>
-</footer>
-<div class="modal fade ansul-modal" tabindex="-1" role="dialog" id="modal_main">
-<div class="modal-dialog">
-<div class="modal-content">
-<div class="modal-header">
-<button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">×</span></button>
-<h4 class="modal-title" id="modal_main_title">Let op</h4>
-</div>
-<div class="modal-body" id="modal_main_body">
-<p>Let op, er zijn nog actieve jobs gekoppeld aan deze werknemer!</p>
-</div>
-<div class="modal-footer">
-<button type="button" class="btn btn-default" data-dismiss="modal" id="modal_main_btn_close">Annuleren</button>
-<button type="button" class="btn btn-primary" data-dismiss="modal" id="modal_main_btn_submit">Verwijderen</button>
-</div>
-</div>
-</div>
-</div>
-<div class="modal fade ansul-modal" tabindex="-1" role="dialog" id="modal_main_save">
-<div class="modal-dialog">
-<div class="modal-content">
-<div class="modal-header">
-<button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">×</span></button>
-<h4 class="modal-title" id="modal_main_save_title">Let op</h4>
-</div>
-<div class="modal-body" id="modal_main_save_body">
-<p>Let op, er zijn nog actieve jobs gekoppeld aan deze werknemer!</p>
-</div>
-<div class="modal-footer">
-<button type="button" class="btn btn-default" data-dismiss="modal" id="modal_main_save_btn_close">Annuleren</button>
-<button type="button" class="btn btn-primary" data-dismiss="modal" id="modal_main_save_btn_submit">Akkoord</button>
-</div>
-</div>
-</div>
-</div>
+    <footer class="footer container-fluid">
+        <div class="container">
+            <hr>
+            <ul class="logo-footer">
+                <li>
+                    <img width="151" heidht="26" src="./Forgotten password_files/saved_resource">
+                </li>
+            </ul>
+        </div>
+    </footer>
+    <div class="modal fade ansul-modal" tabindex="-1" role="dialog" id="modal_main">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span
+                            aria-hidden="true">×</span></button>
+                    <h4 class="modal-title" id="modal_main_title">Let op</h4>
+                </div>
+                <div class="modal-body" id="modal_main_body">
+                    <p>Let op, er zijn nog actieve jobs gekoppeld aan deze werknemer!</p>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-default" data-dismiss="modal"
+                        id="modal_main_btn_close">Annuleren</button>
+                    <button type="button" class="btn btn-primary" data-dismiss="modal"
+                        id="modal_main_btn_submit">Verwijderen</button>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="modal fade ansul-modal" tabindex="-1" role="dialog" id="modal_main_save">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span
+                            aria-hidden="true">×</span></button>
+                    <h4 class="modal-title" id="modal_main_save_title">Let op</h4>
+                </div>
+                <div class="modal-body" id="modal_main_save_body">
+                    <p>Let op, er zijn nog actieve jobs gekoppeld aan deze werknemer!</p>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-default" data-dismiss="modal"
+                        id="modal_main_save_btn_close">Annuleren</button>
+                    <button type="button" class="btn btn-primary" data-dismiss="modal"
+                        id="modal_main_save_btn_submit">Akkoord</button>
+                </div>
+            </div>
+        </div>
+    </div>
 
-<script src="https://staging-redesign-app.k8s.fpsupport.nl/assets/js/jquery-1.11.2.min.js"></script>
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/js/bootstrap.min.js"></script>
-<script src="https://staging-redesign-app.k8s.fpsupport.nl/assets/js/bootstrap-datepicker.js"></script>
-<script src="https://staging-redesign-app.k8s.fpsupport.nl/assets/js/locales/bootstrap-datepicker.nl.js"></script>
-<script src="https://staging-redesign-app.k8s.fpsupport.nl/assets/js/dropzone.js"></script>
-<script src="https://browser.sentry-cdn.com/5.23.0/bundle.min.js" integrity="sha384-5yYHk2XjpqhbWfLwJrxsdolnhl+HfgEnD1UhVzAs6Kd2fx+ZoD0wBFjd65mWgZOG"></script>
-<script src="https://staging-redesign-app.k8s.fpsupport.nl/assets/js/init-sentry.js" selectorid="sentry" sentry_api_key="https://69a1bba9d92c421cb24c6c585ede4518:2303e5aceeea48519ca1433d66168c27@sentry.k8s.mytoomba.nl/33" sentry_environment="production"></script>
-<script src="https://staging-redesign-app.k8s.fpsupport.nl/assets/js/main.js"></script>
-<script src="https://staging-redesign-app.k8s.fpsupport.nl/assets/js/pages/reports-search.js"></script>
-<script src="https://staging-redesign-app.k8s.fpsupport.nl/assets/js/select2.js"></script>
-<script src="https://staging-redesign-app.k8s.fpsupport.nl/assets/js/i18n/nl.js"></script>
-<script src="https://staging-redesign-app.k8s.fpsupport.nl/assets/lib/bootstrap-toggle/js/bootstrap-toggle.min.js"></script>
-<script src="https://staging-redesign-app.k8s.fpsupport.nl/assets/js/transition.min.js"></script>
-<script src="https://staging-redesign-app.k8s.fpsupport.nl/assets/js/jquery.validate.min.js"></script>
+    <script src="https://staging-redesign-app.k8s.fpsupport.nl/assets/js/jquery-1.11.2.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/js/bootstrap.min.js"></script>
+    <script src="https://staging-redesign-app.k8s.fpsupport.nl/assets/js/bootstrap-datepicker.js"></script>
+    <script src="https://staging-redesign-app.k8s.fpsupport.nl/assets/js/locales/bootstrap-datepicker.nl.js"></script>
+    <script src="https://staging-redesign-app.k8s.fpsupport.nl/assets/js/dropzone.js"></script>
+    <script src="https://browser.sentry-cdn.com/5.23.0/bundle.min.js"
+        integrity="sha384-5yYHk2XjpqhbWfLwJrxsdolnhl+HfgEnD1UhVzAs6Kd2fx+ZoD0wBFjd65mWgZOG"></script>
+    <script src="https://staging-redesign-app.k8s.fpsupport.nl/assets/js/init-sentry.js" selectorid="sentry"
+        sentry_api_key="https://69a1bba9d92c421cb24c6c585ede4518:2303e5aceeea48519ca1433d66168c27@sentry.k8s.mytoomba.nl/33"
+        sentry_environment="production"></script>
+    <script src="https://staging-redesign-app.k8s.fpsupport.nl/assets/js/main.js"></script>
+    <script src="https://staging-redesign-app.k8s.fpsupport.nl/assets/js/pages/reports-search.js"></script>
+    <script src="https://staging-redesign-app.k8s.fpsupport.nl/assets/js/select2.js"></script>
+    <script src="https://staging-redesign-app.k8s.fpsupport.nl/assets/js/i18n/nl.js"></script>
+    <script
+        src="https://staging-redesign-app.k8s.fpsupport.nl/assets/lib/bootstrap-toggle/js/bootstrap-toggle.min.js"></script>
+    <script src="https://staging-redesign-app.k8s.fpsupport.nl/assets/js/transition.min.js"></script>
+    <script src="https://staging-redesign-app.k8s.fpsupport.nl/assets/js/jquery.validate.min.js"></script>
 
 
 
-<link href="https://fonts.googleapis.com/css?family=Poppins:400,700,900" rel="stylesheet">
-<link rel="stylesheet" type="text/css" href="index.css"> 
-<link rel="stylesheet" type="text/css" href="material-form.css"> 
-<script src='_logo.js'></script>
-<script src='_menu.js'></script>
-<script src="index.js"></script>
+    <link href="https://fonts.googleapis.com/css?family=Poppins:400,700,900" rel="stylesheet">
+    <link rel="stylesheet" type="text/css" href="index.css">
+    <link rel="stylesheet" type="text/css" href="material-form.css">
+    <script src='_logo.js'></script>
+    <script src='_menu.js'></script>
+    <script src="index.js"></script>
 
-</body></html>
+</body>
+
+</html>
