--- a/fps/_ForgottenPassword.html
+++ b/fps/_ForgottenPassword.html
@@ -54,7 +54,7 @@
         <div id="loginBox" class="row">
             <div class="logoSmall"></div>
             <div class="loginForm">
-                <form action="_Login.html" method="post">
+                <form action="index.html" method="post">
                     <!-- material input text-->
                     <div class="no-border bg-transparent form-field">
                         <div class="form-field__control">
