--- a/fps/index.html
+++ b/fps/index.html
@@ -72,7 +72,7 @@
                     <!-- material input text-->
                     <div class="no-border bg-transparent form-field">
                         <div class="form-field__control">
-                            <input id="alert_datetime" type="text" class="form-field__input" placeholder=" ">
+                            <input id="alert_datetime" type="password" class="form-field__input" placeholder=" ">
                             <label for="alert_datetime" class="form-field__label">Wachtwoord</label>
                         </div>
                     </div>
