--- a/fps/index.html
+++ b/fps/index.html
@@ -53,7 +53,7 @@
         <div id="loginBox" class="row">
             <div class="logoSmall"></div>
 
-            <form action="_Home.html" method="post"
+            <form action="./_Landing.html" method="post"
                 class="loginForm">
                 <div>
                     
