remove home page

--- a/fps/index.html
+++ b/fps/index.html
@@ -53,7 +53,7 @@
         <div id="loginBox" class="row">
             <div class="logoSmall"></div>
 
-            <form action="./_Landing.html" method="post"
+            <form action="#" method="post"
                 class="loginForm">
                 <div>
                     
@@ -78,7 +78,7 @@
                     </div>
 
                 </div>
-                <button type="submit" class="submitBtn submitBtnCustom" name="submit">Aanmelden</button>
+                <a class="btn submitBtn submitBtnCustom" style="display: block;" href="_Landing.html"><span  >Aanmelden</span></a>
             </form>
             <div class="forgotPass">
                 <p><a href="_ForgottenPassword.html">Wachtwoord
