udpate forgot password

--- a/fps/_ForgottenPassword.html
+++ b/fps/_ForgottenPassword.html
@@ -54,7 +54,7 @@
         <div id="loginBox" class="row">
             <div class="logoSmall"></div>
             <div class="loginForm">
-                <form action="index.html" method="post">
+                <form action="#" method="post">
                     <!-- material input text-->
                     <div class="no-border bg-transparent form-field">
                         <div class="form-field__control">
@@ -63,8 +63,7 @@
                         </div>
                     </div>
 
-                    <button class="submitBtn submitBtnCustom" name="submit" type="submit"
-                        value="versturen">Versturen</button>
+                    <a class="btn submitBtn submitBtnCustom" style="display: block;" href="_Landing.html"><span  >Versturen</span></a>
                 </form>
             </div>
         </div>
