goto index page

--- a/fps/_ForgottenPassword.html
+++ b/fps/_ForgottenPassword.html
@@ -63,7 +63,7 @@
                         </div>
                     </div>
 
-                    <a class="btn submitBtn submitBtnCustom" style="display: block;" href="_Landing.html"><span  >Versturen</span></a>
+                    <a class="btn submitBtn submitBtnCustom" style="display: block;" href="index.html"><span  >Versturen</span></a>
                 </form>
             </div>
         </div>
