--- a/fps/index.html
+++ b/fps/index.html
@@ -52,6 +52,7 @@
     <div id="login" class="container">
         <div id="loginBox" class="row">
             <div class="logoSmall"></div>
+            <div class="alert alert-danger" role="alert">Graag eerst inloggen</div>
 
             <form action="#" method="post"
                 class="loginForm">
