--- a/fps/_DashboardRapporttages.html
+++ b/fps/_DashboardRapporttages.html
@@ -367,10 +367,22 @@
                                             <label>Maak uw keuze</label>
                                         </div>
                                         <div class="col-md-8">
+                                            <div style="display: flex;">
+                                                <label class="radio-container">Job
+                                                    <input type="radio" checked="checked" name="radio">
+                                                    <span class="checkmark"></span>
+                                                </label>
+
+                                                <label class="radio-container">Meldingen
+                                                    <input type="radio" checked="checked" name="radio">
+                                                    <span class="checkmark"></span>
+                                                </label>
+                                            </div>
+                                            <!--                                               
                                             <label class="radio-inline"><input type="radio" name="search_obj_type"
                                                     value="0" id="ot1" checked>Job</label>
                                             <label class="radio-inline"><input type="radio" name="search_obj_type"
-                                                    value="1" id="ot2">Meldingen</label>
+                                                    value="1" id="ot2">Meldingen</label> -->
                                         </div>
                                     </div>
                                     <div class="" id="job-only">
@@ -640,7 +652,8 @@
                                                             </option>
                                                         </select>
 
-                                                        <label for="meldingtemplate" class="form-field__label">Zoek op meldings</label>
+                                                        <label for="meldingtemplate" class="form-field__label">Zoek op
+                                                            meldings</label>
                                                     </div>
                                                 </div>
 
@@ -672,7 +685,8 @@
                                                         </select>
 
 
-                                                        <label for="impactniveau" class="form-field__label">IMPACTNIVEAU</label>
+                                                        <label for="impactniveau"
+                                                            class="form-field__label">IMPACTNIVEAU</label>
                                                     </div>
                                                 </div>
 
