--- a/fps/menu-test.html
+++ b/fps/menu-test.html
@@ -143,9 +143,18 @@ var menu = `
 </div>
 
 
+<!-- checkbox -->
 <div class="my-controls">
   <label class="chk-container">One
     <input type="checkbox" checked="checked">
+    <span class="checkmark"></span>
+  </label>
+</div>
+
+<!-- radio -->
+<div class="my-controls">
+  <label class="radio-container">One
+    <input type="radio" checked="checked" name="radio">
     <span class="checkmark"></span>
   </label>
 </div>
